--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
 	],
 	"dependencies": {
 		"express": "3.4.x",
-		"h5bp": "0.0.x",
+		"h5bp": "0.0.x"
+	},
+	"devDependencies": {
 		"grunt": "~0.4.1",
 		"grunt-contrib-copy": "~0.4.1",
 		"grunt-contrib-concat": "~0.3.0",
