--- a/.gitignore
+++ b/.gitignore
@@ -36,13 +36,10 @@
 ehthumbs.db
 Thumbs.db
 
-# Yeoman #
+# Subfolder #
 ###################
-*/node_modules
-*/.tmp
-*/.sass-cache
-*/app/bower_components
-*/dist/.htaccess
+*/*
+!*/dist
 
 # Sublime Text #
 *.sublime-*
