--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "employme.at",
 	"author": "Jakob Viskum Damgaard <jakob_damgaard@hotmail.com>",
-	"version": "0.0.5",
+	"version": "0.0.6",
 	"subdomain": "employme.at",
 	"scripts": {
 		"start": "app.js"
@@ -10,8 +10,7 @@
 		"node": "0.10.x"
 	},
 	"domains": [
-		"employme.at",
-		"www.employme.at"
+		"employme.at"
 	],
 	"dependencies": {
 		"express": "3.4.x",
