--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"node": "0.10.x"
 	},
 	"domains": [
-		"employme.at"
+		"employme.at",
+		"www.employme.at"
 	],
 	"dependencies": {
 		"express": "3.4.x",
