--- a/package.json
+++ b/package.json
@@ -1,20 +1,73 @@
 {
-	"name": "employme.at",
-	"author": "Jakob Viskum Damgaard <jakob_damgaard@hotmail.com>",
-	"version": "0.0.7",
-	"subdomain": "employme.at",
+	"name": "employme-at",
+	"version": "0.0.1-2",
+	"author": {
+		"name": "Jakob Viskum Damgaard",
+		"email": "jakob.viskum.damgaard@gmail.com"
+	},
+	"description": "A website for branding Jakob Viskum Damgaard",
+	"main": "app.js",
+	"repository": {
+		"type": "git",
+		"url": "git://github.com/jvdamgaard/employme.at.git"
+	},
+	"keywords": [
+		"Jakob Viskum Damgaard"
+	],
+	"homepage": "http://employme.at",
 	"scripts": {
-		"start": "app.js"
+		"start": "node app.js",
+		"test": "grunt test",
+		"predeploy": "grunt build"
 	},
-	"engines": {
-		"node": "0.10.x"
-	},
-	"domains": [
-		"employme.at",
-		"www.employme.at"
+	"contributors": [
+		{
+			"name": "Jakob Viskum Damgaard",
+			"email": "jakob.viskum.damgaard@gmail.com"
+		}
 	],
 	"dependencies": {
-		"express": "3.4.x",
-		"h5bp": "0.0.x"
-	}
+		"h5bp": "0.0.9"
+	},
+	"devDependencies": {
+		"grunt": "~0.4.1",
+		"grunt-contrib-copy": "~0.4.1",
+		"grunt-contrib-concat": "~0.3.0",
+		"grunt-contrib-coffee": "~0.7.0",
+		"grunt-contrib-uglify": "~0.2.0",
+		"grunt-contrib-compass": "~0.5.0",
+		"grunt-contrib-jshint": "~0.6.3",
+		"grunt-contrib-cssmin": "~0.6.0",
+		"grunt-contrib-connect": "~0.3.0",
+		"grunt-contrib-clean": "~0.5.0",
+		"grunt-contrib-htmlmin": "~0.1.3",
+		"grunt-contrib-imagemin": "~0.2.0",
+		"grunt-contrib-watch": "~0.5.2",
+		"grunt-rev": "~0.1.0",
+		"grunt-usemin": "~0.1.12",
+		"grunt-mocha": "~0.4.1",
+		"grunt-open": "~0.2.0",
+		"grunt-svgmin": "~0.2.0",
+		"grunt-concurrent": "~0.3.0",
+		"load-grunt-tasks": "~0.1.0",
+		"connect-livereload": "~0.2.0",
+		"grunt-ember-templates": "0.4.14",
+		"time-grunt": "~0.1.1",
+		"grunt-neuter": "~0.5.0"
+	},
+	"engines": {
+		"node": ">=0.10.0"
+	},
+	"bugs": {
+		"url": "https://github.com/jvdamgaard/employme.at/issues"
+	},
+	"licenses": [
+		{
+			"type": "MIT",
+			"url": "https://github.com/jvdamgaard/employme.at/raw/master/LICENSE"
+		}
+	],
+	"analyze": false,
+	"readmeFilename": "ReadMe.md",
+	"subdomain": "employme.at"
 }
