--- a/package.json
+++ b/package.json
@@ -20,12 +20,10 @@
 		"test": "grunt test",
 		"predeploy": "grunt build"
 	},
-	"contributors": [
-		{
-			"name": "Jakob Viskum Damgaard",
-			"email": "jakob.viskum.damgaard@gmail.com"
-		}
-	],
+	"contributors": [{
+		"name": "Jakob Viskum Damgaard",
+		"email": "jakob.viskum.damgaard@gmail.com"
+	}],
 	"dependencies": {
 		"h5bp": "0.0.9"
 	},
@@ -56,17 +54,15 @@
 		"grunt-neuter": "~0.5.0"
 	},
 	"engines": {
-		"node": ">=0.10.0"
+		"node": "0.10.x"
 	},
 	"bugs": {
 		"url": "https://github.com/jvdamgaard/employme.at/issues"
 	},
-	"licenses": [
-		{
-			"type": "MIT",
-			"url": "https://github.com/jvdamgaard/employme.at/raw/master/LICENSE"
-		}
-	],
+	"licenses": [{
+		"type": "MIT",
+		"url": "https://github.com/jvdamgaard/employme.at/raw/master/LICENSE"
+	}],
 	"analyze": false,
 	"readmeFilename": "ReadMe.md",
 	"subdomain": "employme.at"
