--- a/package.json
+++ b/package.json
@@ -51,9 +51,7 @@
 		"connect-livereload": "0.2.0",
 		"grunt-ember-templates": "0.4.14",
 		"time-grunt": "0.1.1",
-		"grunt-neuter": "0.5.0",
-		"grunt-cli": "0.1.11",
-		"bower": "1.2.7"
+		"grunt-neuter": "0.5.0"
 	},
 	"engines": {
 		"node": "0.10.x"
