--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "employme-at",
-	"version": "0.0.1-2",
+	"version": "0.0.2",
 	"author": {
 		"name": "Jakob Viskum Damgaard",
 		"email": "jakob.viskum.damgaard@gmail.com"
