--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,15 @@
 {
-  "name": "employme-at",
-  "version": "0.0.0",
-  "dependencies": {
-    "ember": "1.0.0",
-    "ember-data-shim": "1.0.0-beta.2",
-    "bootstrap-sass": "~3.0.0"
-  },
+  "name": "fotex.dk",
+  "version": "0.0.1",
+  "dependencies": {},
   "devDependencies": {
-    "ember-mocha-adapter": "0.1.2"
+    "chai": "1.8.1",
+    "jquery": "2.0.3",
+    "lodash": "2.4.1",
+    "mocha": "1.15.1",
+    "modernizr": "2.7.1",
+    "momentjs": "2.4.0",
+    "scut": "0.6.0",
+    "inuit.css": "~5.0.0"
   }
 }
