--- a/package.json
+++ b/package.json
@@ -25,33 +25,38 @@
 		"email": "jakob.viskum.damgaard@gmail.com"
 	}],
 	"dependencies": {
-		"h5bp": "0.0.9"
+		"h5bp": "0.0.9",
+		"express": "3.4.6",
+		"hbs": "2.4.0"
 	},
 	"devDependencies": {
-		"grunt": "0.4.1",
+		"grunt": "0.4.2",
+		"grunt-contrib-jshint": "0.7.2",
+		"grunt-contrib-connect": "0.5.0",
+		"grunt-contrib-watch": "0.5.3",
+		"load-grunt-tasks": "0.2.0",
+		"browserify": "3.0.0",
+		"grunt-browserify": "1.2.11",
+		"chai": "1.8.1",
+		"blanket": "1.1.5",
+		"grunt-continue": "0.0.1",
+		"grunt-contrib-uglify": "0.2.7",
+		"grunt-concurrent": "0.4.2",
+		"grunt-modernizr": "0.4.1",
+		"grunt-autoprefixer": "0.4.1",
 		"grunt-contrib-copy": "0.4.1",
-		"grunt-contrib-concat": "0.3.0",
-		"grunt-contrib-coffee": "0.7.0",
-		"grunt-contrib-uglify": "0.2.0",
-		"grunt-contrib-compass": "0.5.0",
-		"grunt-contrib-jshint": "0.6.3",
-		"grunt-contrib-cssmin": "0.6.0",
-		"grunt-contrib-connect": "0.3.0",
-		"grunt-contrib-clean": "0.5.0",
-		"grunt-contrib-htmlmin": "0.1.3",
-		"grunt-contrib-imagemin": "0.2.0",
-		"grunt-contrib-watch": "0.5.2",
-		"grunt-rev": "0.1.0",
-		"grunt-usemin": "0.1.12",
-		"grunt-mocha": "0.4.1",
-		"grunt-open": "0.2.0",
-		"grunt-svgmin": "0.2.0",
-		"grunt-concurrent": "0.3.0",
-		"load-grunt-tasks": "0.1.0",
-		"connect-livereload": "0.2.0",
-		"grunt-ember-templates": "0.4.14",
-		"time-grunt": "0.1.1",
-		"grunt-neuter": "0.5.0"
+		"css-parse": "1.6.0",
+		"grunt-combine-media-queries": "1.0.9",
+		"grunt-contrib-imagemin": "0.4.0",
+		"lodash": "2.4.1",
+		"grunt-remove-logging": "0.1.1",
+		"grunt-shell": "0.6.1",
+		"grunt-contrib-cssmin": "0.7.0",
+		"grunt-todos": "0.2.0",
+		"grunt-newer": "0.6.0",
+		"grunt-contrib-sass": "0.5.1",
+		"grunt-mocha-test": "0.8.1",
+		"glob": "3.2.7"
 	},
 	"engines": {
 		"node": "0.10.x"
