--- a/package.json
+++ b/package.json
@@ -35,8 +35,6 @@
 		"grunt-contrib-connect": "0.5.0",
 		"grunt-contrib-watch": "0.5.3",
 		"load-grunt-tasks": "0.2.0",
-		"browserify": "3.0.0",
-		"grunt-browserify": "1.2.11",
 		"chai": "1.8.1",
 		"blanket": "1.1.5",
 		"grunt-continue": "0.0.1",
@@ -45,8 +43,6 @@
 		"grunt-modernizr": "0.4.1",
 		"grunt-autoprefixer": "0.4.1",
 		"grunt-contrib-copy": "0.4.1",
-		"css-parse": "1.6.0",
-		"grunt-combine-media-queries": "1.0.9",
 		"grunt-contrib-imagemin": "0.4.0",
 		"lodash": "2.4.1",
 		"grunt-remove-logging": "0.1.1",
@@ -56,7 +52,10 @@
 		"grunt-newer": "0.6.0",
 		"grunt-contrib-sass": "0.5.1",
 		"grunt-mocha-test": "0.8.1",
-		"glob": "3.2.7"
+		"glob": "3.2.7",
+		"browserify": "2.36.1",
+		"grunt-browserify": "1.2.11",
+		"grunt-combine-media-queries": "1.0.9"
 	},
 	"engines": {
 		"node": "0.10.x"
