--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
         "load-grunt-tasks": "0.2.1",
         "lodash": "2.4.1",
         "jshint-stylish": "0.1.5",
-        "es6-promise": "0.1.1"
+        "es6-promise": "0.1.1",
+        "grunt-markdown": "0.4.0"
     },
     "engines": {
         "node": "0.10.x"
