--- a/.jitsuignore
+++ b/.jitsuignore
@@ -1,15 +1,5 @@
-node_modules/
-.sass-cache/
-.tmp/
-app/
-test/
-
-!dist/
-
-.bowerrc
-.editorconfig
-.gitattributes
-.gitignore
-.jshintrc
-Gruntfile.js
-bower.json
+*
+!.tmp/dist/
+!views/
+!app.js
+!package.json
