Reintroduce jitsuignore blacklist

--- a/.jitsuignore
+++ b/.jitsuignore
@@ -1,5 +1,15 @@
-*
-!.tmp/dist/
-!views/
-!app.js
-!package.json
+.tmp/*
+!.tmp/dist
+app
+docs
+grunt
+node_modules
+test
+.bowerrc
+.editorconfig
+.gitattributes
+.gitignore
+.jsbeautifyrc
+.jshintrc
+bower.json
+Gruntfile.js
