Step 1 of phantomjs tests

--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
         "grunt-continue": "0.0.1",
         "grunt-contrib-connect": "0.6.0",
         "grunt-contrib-copy": "0.5.0",
-        "grunt-contrib-cssmin": "0.7.0",
         "grunt-contrib-imagemin": "0.4.0",
         "grunt-contrib-jshint": "0.8.0",
         "grunt-contrib-sass": "0.6.0",
@@ -59,7 +58,9 @@
         "lodash": "2.4.1",
         "jshint-stylish": "0.1.5",
         "es6-promise": "0.1.1",
-        "grunt-markdown": "0.4.0"
+        "grunt-markdown": "0.4.0",
+        "grunt-mocha": "0.4.7",
+        "grunt-csso": "0.5.3"
     },
     "engines": {
         "node": "0.10.x"
