--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
         "grunt-markdown": "0.5.0",
         "grunt-mocha": "0.4.8",
         "grunt-csso": "0.5.3",
-        "grunt-mocha-test": "0.8.1"
+        "grunt-mocha-test": "0.8.1",
+        "grunt-string-replace": "0.2.7"
     },
     "engines": {
         "node": "0.10.x"
