--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,6 @@
         "modernizr": "2.7.1",
         "momentjs": "2.5.0",
         "scut": "0.8.0",
-        "prismjs": "*",
-        "sinon": "1.7.3"
+        "prismjs": "*"
     }
 }
