--- a/.jsbeautifyrc
+++ b/.jsbeautifyrc
@@ -24,7 +24,7 @@
         "indent_level": 0,
         "indent_size": 4,
         "indent_with_tabs": false,
-        "jslint_happy": true,
+        "jslint_happy": false,
         "keep_array_indentation": false,
         "keep_function_indentation": false,
         "max_preserve_newlines": 4,
