--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
         "grunt-todos": "0.2.0",
         "lodash": "2.4.1",
         "jshint-stylish": "0.1.5",
-        "es6-promise": "0.1.1",
         "grunt-markdown": "0.5.0",
         "grunt-mocha": "0.4.9",
         "grunt-csso": "0.5.3",
@@ -72,7 +71,8 @@
         "sinon": "1.7.3",
         "grunt-touch": "0.1.0",
         "grunt-contrib-clean": "0.5.0",
-        "require-grunt-configs": "0.4.0"
+        "require-grunt-configs": "0.4.0",
+        "bluebird": "1.0.0"
     },
     "engines": {
         "node": "0.10.x"
