--- a/package.json
+++ b/package.json
@@ -37,42 +37,40 @@
     },
     "devDependencies": {
         "blanket": "1.1.6",
+        "bluebird": "1.0.0",
         "browserify": "3.20.0",
         "chai": "1.8.1",
-        "css-parse": "1.5.x",
         "glob": "3.2.8",
         "grunt": "0.4.2",
         "grunt-autoprefixer": "0.6.4",
         "grunt-browserify": "1.3.0",
         "grunt-continue": "0.0.1",
+        "grunt-contrib-clean": "0.5.0",
         "grunt-contrib-connect": "0.6.0",
         "grunt-contrib-copy": "0.5.0",
-        "jpegtran-bin": "0.2.0",
-        "grunt-contrib-imagemin": "0.4.1",
+        "grunt-contrib-imagemin": "0.5.0",
         "grunt-contrib-jshint": "0.8.0",
         "grunt-contrib-sass": "0.6.0",
-        "grunt-contrib-uglify": "0.2.7",
-        "grunt-contrib-watch": "0.5.3",
+        "grunt-csso": "0.5.3",
         "grunt-express-server": "0.4.11",
-        "grunt-modernizr": "0.4.1",
-        "grunt-newer": "0.6.1",
-        "grunt-open": "0.2.2",
-        "grunt-remove-logging": "0.2.0",
-        "grunt-shell": "0.6.1",
-        "grunt-styleguide": "0.2.14",
-        "grunt-todos": "0.2.0",
-        "lodash": "2.4.1",
-        "jshint-stylish": "0.1.5",
+        "grunt-contrib-uglify": "0.3.0",
+        "grunt-contrib-watch": "0.5.3",
         "grunt-markdown": "0.5.0",
         "grunt-mocha": "0.4.9",
-        "grunt-csso": "0.5.3",
-        "grunt-mocha-test": "0.8.1",
+        "grunt-mocha-test": "0.8.2",
+        "grunt-modernizr": "0.4.1",
+        "grunt-newer": "0.6.1",
+        "grunt-open": "0.2.3",
+        "grunt-remove-logging": "0.2.0",
+        "grunt-shell": "0.6.2",
         "grunt-string-replace": "0.2.7",
-        "sinon": "1.7.3",
+        "grunt-styleguide": "0.2.14",
+        "grunt-todos": "0.2.0",
         "grunt-touch": "0.1.0",
-        "grunt-contrib-clean": "0.5.0",
+        "jshint-stylish": "0.1.5",
+        "lodash": "2.4.1",
         "require-grunt-configs": "0.4.0",
-        "bluebird": "1.0.0"
+        "sinon": "1.7.3"
     },
     "engines": {
         "node": "0.10.x"
