--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
         "grunt-contrib-copy": "0.5.0",
         "grunt-contrib-imagemin": "0.5.0",
         "grunt-contrib-jshint": "0.8.0",
-        "grunt-contrib-sass": "0.6.0",
         "grunt-csso": "0.5.3",
         "grunt-express-server": "0.4.11",
         "grunt-contrib-uglify": "0.3.0",
@@ -62,6 +61,7 @@
         "grunt-newer": "0.6.1",
         "grunt-open": "0.2.3",
         "grunt-remove-logging": "0.2.0",
+        "grunt-sass": "0.10.0",
         "grunt-shell": "0.6.2",
         "grunt-string-replace": "0.2.7",
         "grunt-styleguide": "0.2.14",
