--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "devDependencies": {
         "blanket": "1.1.6",
         "bluebird": "1.0.0",
-        "browserify": "3.20.0",
+        "browserify": "3.24.1",
         "chai": "1.8.1",
         "grunt": "0.4.2",
         "grunt-autoprefixer": "0.6.4",
@@ -51,26 +51,26 @@
         "grunt-contrib-jshint": "0.8.0",
         "grunt-csso": "0.5.3",
         "grunt-express-server": "0.4.11",
-        "grunt-contrib-uglify": "0.3.1",
+        "grunt-contrib-uglify": "0.3.2",
         "grunt-contrib-watch": "0.5.3",
         "grunt-markdown": "0.5.0",
-        "grunt-mocha": "0.4.9",
+        "grunt-mocha": "0.4.10",
         "grunt-mocha-test": "0.8.2",
         "grunt-modernizr": "0.4.1",
         "grunt-newer": "0.6.1",
         "grunt-open": "0.2.3",
         "grunt-remove-logging": "0.2.0",
         "grunt-sass": "0.10.0",
-        "grunt-shell": "0.6.2",
+        "grunt-shell": "0.6.4",
         "grunt-string-replace": "0.2.7",
         "grunt-styleguide": "0.2.14",
         "grunt-todos": "0.2.0",
         "grunt-touch": "0.1.0",
         "jshint-stylish": "0.1.5",
+        "jquery": "2.1.0",
         "lodash": "2.4.1",
         "require-grunt-configs": "0.4.0",
-        "sinon": "1.7.3",
-        "jquery": "2.1.0-rc1"
+        "sinon": "1.7.3"
     },
     "engines": {
         "node": "0.10.x"
