Use highlight.js

--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,16 @@
 {
-    "name": "employme-at",
-    "version": "0.0.1",
-    "dependencies": {},
-    "devDependencies": {
-        "bootstrap": "3.1.0",
-        "chai": "1.9.0",
-        "inuit.css": "5.0.0",
-        "mocha": "1.17.1",
-        "modernizr": "2.7.1",
-        "prismjs": "*",
-        "scut": "0.9.0"
-    }
+  "name": "employme-at",
+  "version": "0.0.1",
+  "dependencies": {
+    "highlightjs": "~8.0.0"
+  },
+  "devDependencies": {
+    "bootstrap": "3.1.0",
+    "chai": "1.9.0",
+    "inuit.css": "5.0.0",
+    "mocha": "1.17.1",
+    "modernizr": "2.7.1",
+    "prismjs": "*",
+    "scut": "0.9.0"
+  }
 }
